# CM2005-OOP

./: .gitignore  CMakeLists.txt
data/: USERS_REGISTER.CSV  USERS_TRADING.CSV  USERS_WALLET.CSV
src/: CSVReader.cpp  CSVReader.h  Candlestick.cpp  Candlestick.h  CandlestickCalculator.cpp  CandlestickCalculator.h  Candlestickplotter.cpp  Candlestickplotter.h  MerkelMain.cpp  MerkelMain.h  OrderBook.cpp  OrderBook.h  OrderBookEntry.h  Simulator.cpp  Simulator.h  TransactionLog.cpp  TransactionLog.h  UserManager.cpp  UserManager.h  UserWallet.cpp  UserWallet.h  Wallet.h  batch_sim.cpp  main  main.cpp
submission/: code_to_pdf.py  command.txt  pyproject.toml
